kubernetes/base-facilities/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: istio-dashboard
  namespace: istio-system
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: istio-system
spec:
  ingressClassName: istio-dashboard
  rules:
  - host: kiali.chenyingqiao.top
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
---
# k8s dashboard
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: k8s-dashboard
  namespace: kubernetes-dashboard
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: istio-dashboard
  rules:
  - host: dashboard.chenyingqiao.top
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
